# nebula-xi-hal

./: CMakeLists.txt  CMakePresets.json  README.md  Readme.md
.github/workflows/: cmake.yml
nebulaxi/: hal_axi.h  hal_dma.h  hal_io.h  hal_pcie.h  hal_xdma.h
nebulaxi/hal/: hal_axi.h  hal_device.h  hal_dma.h  hal_io.h  hal_pcie.h  hal_xdma.h
src/: hal_common.cpp  hal_linux.cpp  hal_windows.cpp  linux.cpp  windows.cpp  xdma.hpp  xdma_hal.hpp  xdma_linux.cpp  xdma_windows.cpp
tests/: CMakeLists.txt
tests/test_hal_axi/: CMakeLists.txt  test_hal_axi.cpp
tests/test_hal_device/: CMakeLists.txt  test_hal_device.cpp
tests/test_hal_pcie/: CMakeLists.txt  test_hal_pcie.cpp
tests/test_hal_xdma/: CMakeLists.txt  test_hal_xdma.cpp
